applying changes to support Spring Boot 3, Elasticsearch 9 and Java 17