@@ -13,6 +13,7 @@
  */
 package org.gbif.checklistbank.elasticsearch;
 
+import java.util.Map;
 import org.gbif.common.search.es.EsClient;
 
 import org.apache.spark.SparkConf;
@@ -23,13 +24,12 @@ import org.elasticsearch.spark.rdd.api.java.JavaEsSpark;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.collect.ImmutableMap;
-
 import co.elastic.clients.elasticsearch._types.Time;
 import co.elastic.clients.elasticsearch._types.mapping.TypeMapping;
 import co.elastic.clients.elasticsearch.indices.IndexSettings;
 import co.elastic.clients.elasticsearch.indices.IndexSettingsAnalysis;
 import co.elastic.clients.elasticsearch.indices.Translog;
+import co.elastic.clients.elasticsearch.indices.TranslogDurability;
 
 /**
  * Elasticsearch Checklistbank indexer. Creates a new Index using as input Avro files puts that
@@ -66,7 +66,7 @@ public class EsBackfill {
                     IndexSettingsAnalysis._DESERIALIZER))
             .refreshInterval(new Time.Builder().time("-1").build())
             .numberOfReplicas("0")
-            .translog(new Translog.Builder().durability("async").build())
+            .translog(new Translog.Builder().durability(TranslogDurability.Async).build())
             .numberOfShards(String.valueOf(configuration.getElasticsearch().getNumberOfShards()))
             .build();
 
@@ -102,7 +102,7 @@ public class EsBackfill {
     JavaEsSpark.saveJsonToEs(
         usages,
         indexName,
-        ImmutableMap.of("es.mapping.id", "key"));
+        Map.of("es.mapping.id", "key"));
     // This statement is used because the Guice container is not stopped inside the threadpool.
     LOG.info("Indexing done. Time to exit.");
 
